fixed spacing on left in input and text area. also added type to inputs missing it * this is inputed after due time for homework

--- a/style.css
+++ b/style.css
@@ -85,3 +85,9 @@ select {
   margin-bottom: 5px;
   width: 200px;
 }
+
+input,
+textarea,
+select {
+  padding-left: 10px;
+}
